--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "4.6.0",
+    "history": "^4.10.1",
+    "intl": "^1.2.5",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-datepicker": "^4.1.1",
