--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.6.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -11,8 +12,11 @@
     "bootstrap": "4.6.0",
     "history": "^4.10.1",
     "intl": "^1.2.5",
+    "js-cookies": "^1.0.4",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-cookie": "^4.0.3",
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.9.0",
