--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "intl": "^1.2.5",
     "js-cookies": "^1.0.4",
     "moment": "^2.29.1",
+    "netlify-cli": "^4.1.7",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-cookie": "^4.0.3",
